# pi-hardware-info

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  build_package.sh  fabfile.py  pi_hardware_info.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_something.py  tests.py
.github/workflows/: release-pypi.yaml
requirements.d/: pypi.txt
